# kafka-gcp

./: .gitignore  .pre-commit-config.yaml  DOCUMENTATION.md  README.md  pyproject.toml
infra/: apply_terraform.sh  main.tf  outputs.tf  variables.tf
kafka_cli/: main.py
kafka_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kafka_cli/commands/: addons.py  health.py  profiles.py  start.py  terraform.py
kafka_cli/core/: config_manager.py  errors.py  interactive.py
kafka_cli/core/cloud/: __init__.py  gcp.py  provider.py
kafka_cli/core/commands/: addon_commands.py  base.py  profile_commands.py
kafka_cli/infra/: apply_terraform.sh  backend.tf  cloud_run.tf  compute.tf  example.tfvars  kafka.conf  kafka_bootstrap.sh  kms.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.template  variables.tf  vpc.tf
kafka_cli/utils/: config.py  gcp_auth.py  interactive.py  singleton.py  terraform.py
