[project]
name = "kafka-cli"
version = "0.1.0"
description = "Interactive CLI tool for provisioning and managing Kafka clusters on GCP"
authors = []
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "questionary>=2.0.1",
    "rich>=13.4.2",
    "pydantic>=2.0.0",
    "python-terraform>=0.10.1",
    "google-cloud-compute>=1.12.0",
    "google-cloud-container>=2.30.0",
    "pyyaml>=6.0",
    "kubernetes>=28.1.0",
    "click>=8.1.6",
    "httpx>=0.24.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]

[project.scripts]
kafka-cli = "kafka_cli.main:app"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
